--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -21,7 +21,7 @@ jobs:
               run: |
                 mkdir deployment
                 rsync -Rr . deployment
-                zip -r trabalho.zip deployment
+                zip -r deployment.zip deployment
                 aws s3 cp deployment.zip s3://${{ secrets.S3_BUCKET }}/
 
             - name: Create deployment
@@ -29,4 +29,4 @@ jobs:
                 aws deploy create-deployment --application-name trabalho \
                     --deployment-config-name CodeDeployDefault.OneAtATime \
                     --deployment-group-name producao \
-                    --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=trabalho.zip
+                    --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=deployment.zip
