--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -31,5 +31,5 @@ jobs:
                     --deployment-group-name producao \
                     --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=deployment.zip
             - name: Run App
-              run: sudo sh /home/ubuntu/scripts/start_server.sh
+              run: sudo sh scripts/start_server.sh
                    
